# stocks_app

./: .gitignore  Cargo.toml  PLAN.md  README.md  Rocket.toml  index.html  style.css
src/: binance.rs  main.rs
src/frontend/templates/: index.html.hbs
