[package]
name = "stocks_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"

reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }